<resources>
    <string name="app_name">Celestial Photos App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notifications">Notifications</string>
    <string name="menu_apod">Astronomy Picture of the Day</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_earth">Earth API</string>
    <string name="menu_stats">Usage Statistics</string>

    <!-- Earth API Strings -->
    <string name="earth_title">Earth API</string>
    <string name="earth_lat">Latitude</string>
    <string name="earth_long">Longitude</string>
    <string name="earth_date">Date</string>
    <string name="earth_today">Today</string>
    <string name="earth_get_image">Get Image</string>

    <!-- Statistics Page Strings -->
    <string name="stats_streak">Consecutive Day Streak</string>
    <string name="stats_streak_default">1</string>

    <!-- Apod API String -->
    <string name="apod_favorite_btn">Favorite</string>
    <string name="apod_view_favorite_btn">View Favorite Apods</string>
</resources>